menu edit: tree overflow fix

--- a/Menus/Addons/_Addons/MenuEdit/MenuEdit.scss
+++ b/Menus/Addons/_Addons/MenuEdit/MenuEdit.scss
@@ -4,6 +4,13 @@
 
     .t_treeview {
         height:20em;
+        overflow: auto;
+        border: 1px solid lightgray;
+        border-radius: 3px;
+        .ui-widget.ui-widget-content,
+        .ui-widget-content {
+            border:none;
+        }
     }
 
     .t_view {
